import "../network.proto";

message SignatureRequest {
    required bytes message = 1;
    required Roster roster = 2;
}

message SignatureResponse {
    required bytes aggregate = 1;
    required bytes signature = 2;
}