syntax = "proto2";

package cothority;

import "messages.proto";

message BlockLink {
    required bytes Hash = 1;
    required bytes Signature = 2;
}

message SkipBlock {
    optional sint32 Index = 1;
    optional sint32 Height = 2;
    optional sint32 MaximumHeight = 3;
    optional sint32 BaseHeight = 4;
    repeated bytes BackLinkIDs = 5;
    repeated bytes VerifierIDs = 6;
    optional bytes ParentBlockID = 7;
    optional bytes GenesisID = 8;
    optional bytes Data = 9;
    optional onet.Roster Roster = 10;
    optional bytes Hash = 11;
    repeated BlockLink ForwardLink = 12;
    optional bytes ChildSL = 13;
}

message StoreSkipBlockRequest {
    required SkipBlock NewBlock = 1;
}


message StoreSkipBlockResponse {
    required SkipBlock Previous = 1;
    required SkipBlock Latest = 2;
}

message GetBlocksRequest{
    required bytes Start = 1;
    required bytes End = 2;
    required sint32 MaxHeight = 3;
}

message GetBlocksResponse{
    repeated SkipBlock Reply = 1;
}

message GetAllSkipchainsRequest{
}

message GetAllSkipchainsResponse{
    repeated SkipBlock Last = 1;
}
